@@ -96,7 +96,7 @@
   <div>Message: <span id="results-message"></span></div>
   <div>Count: <span id="results-count"></span></div>
   <div>frameId: <span id="results-frame-id"></span></div>
-  <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button></div>
+  <div><button id="show-all-results">Show all results</button><button id="open-options">Open options</button><button id="set-style">Set style</button><button id="reset-style">Reset style</button><button id="set-all-style">Set style(all frames)</button><button id="reset-all-style">Reset style(all frame)</button></div>
   <h2>Context detail</h2>
   <table id="context-detail">
     <tbody></tbody>
